# GUI

./: CMakeLists.txt  README.md  run.bat  run.sh
include/: gui.hpp
src/: main.cpp
src/gui/: button.cpp  input.cpp
